force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/KimbleOne__TravelRequisitionItem__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Travel Requisition Item</label>
    <nameField>
        <label>Travel Requisition Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travel Requisition Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>