force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__ActionRequest__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActionRequest__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Action Request</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>TravelRequisitionItemActionRequest</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Travel Requisition Items (Action Request)</relationshipLabel>
    <relationshipName>TravelRequisitionItems</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>