force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__ActivityExpenseCategory__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActivityExpenseCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Expense Category</label>
    <referenceTo>KimbleOne__ActivityExpenseCategory__c</referenceTo>
    <relationshipLabel>Travel Requisition Items</relationshipLabel>
    <relationshipName>TravelRequisitionItems</relationshipName>
    <type>Lookup</type>
</CustomField>