force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__BookingNotes__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BookingNotes__c</fullName>
    <label>Booking Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>