force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__CarHireDropOffDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CarHireDropOffDate__c</fullName>
    <label>Drop-off Date</label>
    <type>Date</type>
</CustomField>