force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__CarHireDropOffLocation__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CarHireDropOffLocation__c</fullName>
    <label>Drop-off</label>
    <length>80</length>
    <type>Text</type>
</CustomField>