force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__CarHireDropOffTime__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CarHireDropOffTime__c</fullName>
    <label>Drop-off Time</label>
    <length>80</length>
    <type>Text</type>
</CustomField>