force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__CarHirePickUpDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CarHirePickUpDate__c</fullName>
    <label>Pick-up Date</label>
    <type>Date</type>
</CustomField>