force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__CarHirePickUpLocation__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CarHirePickUpLocation__c</fullName>
    <label>Pick-up</label>
    <length>80</length>
    <type>Text</type>
</CustomField>