force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__CarHirePickUpTime__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CarHirePickUpTime__c</fullName>
    <label>Pick-up Time</label>
    <length>80</length>
    <type>Text</type>
</CustomField>