force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__Description__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Description__c</fullName>
    <label>Description</label>
    <length>500</length>
    <type>Html</type>
</CustomField>