force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__FlightDestinationAirport__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__FlightDestinationAirport__c</fullName>
    <label>Destination Airport</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BHD</fullName>
            </value>
            <value>
                <fullName>BFS</fullName>
            </value>
            <value>
                <fullName>DUB</fullName>
            </value>
            <value>
                <fullName>LHR</fullName>
            </value>
            <value>
                <fullName>LGW</fullName>
            </value>
            <value>
                <fullName>LCY</fullName>
            </value>
            <value>
                <fullName>STN</fullName>
            </value>
            <value>
                <fullName>LON</fullName>
            </value>
            <value>
                <fullName>BEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>