force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__FlightReturnTimeRange__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__FlightReturnTimeRange__c</fullName>
    <label>Return Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>am</fullName>
            </value>
            <value>
                <fullName>pm</fullName>
            </value>
            <value>
                <fullName>14:00 - 17:00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>