force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__FlightTravelBasis__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__FlightTravelBasis__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Travel Basis</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>TravelBasis</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Travel Requisition Items Flight</relationshipLabel>
    <relationshipName>TravelRequisitionItemsFlight</relationshipName>
    <type>Lookup</type>
</CustomField>