force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__HotelCheckInDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HotelCheckInDate__c</fullName>
    <label>Check-In</label>
    <type>Date</type>
</CustomField>