force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__HotelCheckOutDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HotelCheckOutDate__c</fullName>
    <label>Check-Out</label>
    <type>Date</type>
</CustomField>