force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__HotelPreference__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HotelPreference__c</fullName>
    <label>Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>