force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__IsCancelled__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsCancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cancelled</label>
    <type>Checkbox</type>
</CustomField>