force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__PreviousTravelRequisitionItem__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PreviousTravelRequisitionItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Travel Requisition Item</label>
    <referenceTo>KimbleOne__TravelRequisitionItem__c</referenceTo>
    <relationshipLabel>Travel Requisition Items</relationshipLabel>
    <relationshipName>TravelRequisitionItems</relationshipName>
    <type>Lookup</type>
</CustomField>