force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__RequisitionNotes__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RequisitionNotes__c</fullName>
    <label>Requisition Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>