force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__SelectedTravelItineraryItem__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SelectedTravelItineraryItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TravelItineraryItem</label>
    <referenceTo>KimbleOne__TravelItineraryItem__c</referenceTo>
    <relationshipLabel>Travel Requisition Items</relationshipLabel>
    <relationshipName>TravelRequisitionItems</relationshipName>
    <type>Lookup</type>
</CustomField>