force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__SupplierAccount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplierAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Travel Requisition Items</relationshipLabel>
    <relationshipName>TravelRequisitionItems</relationshipName>
    <type>Lookup</type>
</CustomField>