force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__TaxiDepartureAddress__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TaxiDepartureAddress__c</fullName>
    <label>Departure Address</label>
    <length>375</length>
    <type>LongTextArea</type>
</CustomField>