force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__TaxiDepartureDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TaxiDepartureDate__c</fullName>
    <label>Departure Date</label>
    <type>Date</type>
</CustomField>