force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__TaxiDepartureTime__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TaxiDepartureTime__c</fullName>
    <label>Departure Time</label>
    <length>80</length>
    <type>Text</type>
</CustomField>