force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__TaxiDestinationAddress__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TaxiDestinationAddress__c</fullName>
    <label>Destination Address</label>
    <length>375</length>
    <type>LongTextArea</type>
</CustomField>