force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__TrainDepartureStation__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TrainDepartureStation__c</fullName>
    <label>Departure Station</label>
    <length>50</length>
    <type>Text</type>
</CustomField>