force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__TrainDepartureTimeRange__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TrainDepartureTimeRange__c</fullName>
    <label>Departure Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>am</fullName>
            </value>
            <value>
                <fullName>pm</fullName>
            </value>
            <value>
                <fullName>&lt; 7am</fullName>
            </value>
            <value>
                <fullName>07.00 - 08.00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>