force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__TrainDestinationStation__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TrainDestinationStation__c</fullName>
    <label>Destination Station</label>
    <length>50</length>
    <type>Text</type>
</CustomField>