force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__TrainReturnDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TrainReturnDate__c</fullName>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>