force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__TravelRequisition__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TravelRequisition__c</fullName>
    <label>Travel Requisition</label>
    <referenceTo>KimbleOne__TravelRequisition__c</referenceTo>
    <relationshipLabel>Travel Requisition Items</relationshipLabel>
    <relationshipName>TravelRequisitionItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>