force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/fields/KimbleOne__TravelRequisitionVersion__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TravelRequisitionVersion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Travel Requisition Version</label>
    <referenceTo>KimbleOne__TravelRequisitionVersion__c</referenceTo>
    <relationshipLabel>Travel Requisition Items</relationshipLabel>
    <relationshipName>Travel_Requisition_Items</relationshipName>
    <type>Lookup</type>
</CustomField>