force-app/main/default/objects/KimbleOne__TravelRequisitionItem__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>KimbleOne__TravelRequisitionVersion__c</columns>
    <columns>KimbleOne__TravelRequisition__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <columns>KimbleOne__SelectedTravelItineraryItem__c</columns>
    <columns>KimbleOne__IsCancelled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>